# Zone

./: CHANGELOG.md  INSTALL.md  README.md  ZONAL.md  install.bat  pyproject.toml  zonal.py  zone.py
.githooks/: bump_patch.py  pre-commit
.github/scripts/: weekly_bump.py
.github/workflows/: weekly-version-bump.yml
