[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zone"
version = "1.0.4"
description = "Development CLI for ZT POS and apps built on it."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Zonal Tech" }]
keywords = ["zt-pos", "cli", "flask"]
# zone itself is pure-stdlib; each zone's app dependencies live in that zone's
# own .venv (installed by `zone setup`/`zone install`), not here.
dependencies = []

[project.scripts]
zone = "zone:main"

[tool.setuptools]
py-modules = ["zone"]
